--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "babel-cli": "^6.14.0",
     "babel-loader": "^6.2.5",
     "babel-preset-es2015": "^6.14.0",
+    "express": "^4.14.0",
     "serialport": "^4.0.1",
     "ws": "^1.1.1"
   },
